--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,14 @@ body{
 }
 
    ::-webkit-scrollbar{width:8px !important;height: 8px !important;}
-  ::-webkit-scrollbar-thumb{background:#ccc;}
+   ::-webkit-scrollbar-thumb{background:#ccc;}
    ::-webkit-scrollbar-track{background:#fff;}
 
 .container{width:95%;margin:auto;}
 header .top-strip{border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(0, 0, 0, 0.1);};
+
+.btn-org {background: #ac5555 !important; color: #fff !important; font-weight: 500; font-size: 16px;padding: 7px 10px !important;}
+
 
 
 .link:hover{color:#ac5555;}
@@ -32,6 +35,10 @@ nav ul button:hover{background:none!important;}
 .swiper-button-prev,.swiper-button-next{display:flex;align-items:center;justify-content:center;
 background: #fff;border-radius: 100%;width: 45px;height: 45px;min-width: 45px;}
 .swiper-button-prev:after,.swiper-button-next:after{font-size: 22px !important;color: #000;}
+
+.smlBtn .swiper-button-prev,.swiper-button-next{width: 30px!important; height: 30px !important;
+min-width: 30px !important; top:55% !important}
+.smlBtn .swiper-button-prev:after,.swiper-button-next:after{font-size:18px !important;color: #000;}
 
 .homeCatSlider {overflow: inherit !important;}
 
@@ -53,5 +60,9 @@ background: #fff;border-radius: 100%;width: 45px;height: 45px;min-width: 45px;}
 
 .productsSlider .swiper-wrapper{padding:15px;margin-left: -15px;margin-right: -15px;}
 
+footer form input::placeholder{font-size: 14px;}
 
+.css-imrjgg-MuiButtonBase-root-MuiCheckbox-root.Mui-checked,
+.css-imrjgg-MuiButtonBase-root-MuiCheckbox-root.MuiCheckbox-indeterminate{color:#ac5555 !important;}
 
+.MuiFormControlLabel-label{font-size:13px !important;color: rgba(0, 0, 0, 0.8);}
