--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,17 @@ footer form input::placeholder{font-size: 14px;}
 .css-imrjgg-MuiButtonBase-root-MuiCheckbox-root.MuiCheckbox-indeterminate{color:#ac5555 !important;}
 
 .MuiFormControlLabel-label{font-size:13px !important;color: rgba(0, 0, 0, 0.8);}
+
+.swiper-pagination-bullet-acctive{background-color: #ac5555;}
+
+.homeSliderV2 .swiper-slider-active .info{right:0px !important;opacity: 1;}
+
+.homeSliderV2 .swiper-slider-active .info h4{right:0px !important;opacity: 1;}
+.homeSliderV2 .swiper-slider-active .info h3{right:0px !important;opacity: 1;}
+.homeSliderV2 .swiper-slider-active .info h2{right:0px !important;opacity: 1;}
+.homeSliderV2 .swiper-slider-active .info button{bottom:0px !important;opacity: 1;}
+
+.homeSliderV2.info h4{transition-duration:2s;}
+.homeSliderV2.info h2{transition-duration:2.3s;}
+.homeSliderV2.info h3{transition-duration:3s;}
+.homeSliderV2.info button{transition-duration:3.3s;}
