--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,9 @@ footer form input::placeholder{font-size: 14px;}
 .homeSliderV2.info h2{transition-duration:2.3s;}
 .homeSliderV2.info h3{transition-duration:3s;}
 .homeSliderV2.info button{transition-duration:3.3s;}
+
+.MuiCheckbox-root{padding: 6px,!important;}
+
+.ReactCollapse--collapse {
+  transition: height 400ms;
+}
