--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ body{
 header .top-strip{border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(0, 0, 0, 0.1);};
 
 .btn-org {background: #ac5555 !important; color: #fff !important; font-weight: 500; font-size: 16px;padding: 7px 10px !important;}
+.btn-org:hover{background: #000 !important;}
+.link:hover{color:#ac5555;}
 
 
 
@@ -86,3 +88,6 @@ footer form input::placeholder{font-size: 14px;}
 .ReactCollapse--collapse {
   transition: height 400ms;
 }
+
+.itemViewActions button.active svg{color: #ac5555 !important; opacity:1;}
+Mui-selected.MuiPaginationItem-page{background: #ac5555 !important;color: #fff !important;}
