--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,11 @@ body{
    font-family: "Playpen Sans", cursive;
   font-optical-sizing: auto;
   background-color:#f5f0f0;
-  color: rgba(0, 0, 0, 0.9);
+  color: #666;
   overflow-x:hidden;
 }
+
+p{font-size:14px;line-height:25px;}
 
    ::-webkit-scrollbar{width:8px !important;height: 8px !important;}
    ::-webkit-scrollbar-thumb{background:#ccc;}
@@ -91,3 +93,11 @@ footer form input::placeholder{font-size: 14px;}
 
 .itemViewActions button.active svg{color: #ac5555 !important; opacity:1;}
 Mui-selected.MuiPaginationItem-page{background: #ac5555 !important;color: #fff !important;}
+
+.shadow-md, .shadow-lg{box-shadow:0 1px 3px rgba(0, 0, 0, 0.12) ,0 1px 2px rgba(0, 0, 0, 0.24) !important;}
+
+.zoomProductSliderThumbs .swiper-wrapper{padding-top: 38px !important;}
+.zoomProductSliderThumbs .swiper-button-next{bottom: 0px !important;right:inherit !important;top:inherit !important; width: 100% !important; height: 30px !important;border-radius: 0px !important;}
+.zoomProductSliderThumbs .swiper-button-prev{top: 20px !important;left:0 !important;width: 100% !important; height: 30px !important;border-radius: 0px !important;}
+.zoomProductSliderThumbs .swiper-button-prev:after{transform: rotate(90deg);}
+.zoomProductSliderThumbs .swiper-button-next:after{transform: rotate(90deg);}
