--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ body{
   overflow-x:hidden;
 }
 
-p{font-size:14px;line-height:25px;}
+p{font-size:14px;line-height:25px;margin-bottom: 10px !important; margin-top: 10px !important;}
+h1,h2,h3,h4,h5,h6{font-weight: 600;}
 
    ::-webkit-scrollbar{width:8px !important;height: 8px !important;}
    ::-webkit-scrollbar-thumb{background:#ccc;}
@@ -110,3 +111,6 @@ input[type=nummber]::-webkit-outer-spin-button{
   -moz-appearance:none;
    appearance :none;
 }
+
+.reviewScroll::-webkit-scrollbar{width: 5px !important;}
+.reviewScroll::-webkit-scrollbar-thumb{background: #ccc !important;}
