--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,9 @@ h1,h2,h3,h4,h5,h6{font-weight: 600;}
 header .top-strip{border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(0, 0, 0, 0.1);};
 
 .btn-org {background: #ac5555 !important; color: #fff !important; font-weight: 500; font-size: 16px;padding: 7px 10px !important;}
-.btn-org:hover{background: #000 !important;}
+.btn-org:hover{background: #c27070 !important;color:#000 !important;}
+
+.btn-lg{ font-size: 18px;padding: 10px 10px !important }
 .link:hover{color:#ac5555;}
 
 
