--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,7 @@ input[type=nummber]::-webkit-outer-spin-button{
 .cartPanel .MuiPaper-root{width:400px !important; overflow: hidden;}
 
 #size-menu .MuiButtonBase-root{foot-size :12px !important;}
+
+.otpBox input{border:1px solid rgba(0,0,0,0.3) !important; outline:none !important; border-radius: 4px;}
+.otpBox input:focus{border:1px solid rgba(0,0,0,0.7)!important;}
+.otpBox .container{height: 90vh; display: flex;}
