--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,9 @@ min-width: 30px !important; top:55% !important}
 
 footer form input::placeholder{font-size: 14px;}
 
+.scroll ::-webkit-scrollbar{width: 5px !important}
+.scroll ::-webkit-scrollbar-thumb{background: #ccc !important;}
+
 .css-imrjgg-MuiButtonBase-root-MuiCheckbox-root.Mui-checked,
 .css-imrjgg-MuiButtonBase-root-MuiCheckbox-root.MuiCheckbox-indeterminate{color:#ac5555 !important;}
 
