--- a/src/index.css
+++ b/src/index.css
@@ -130,3 +130,5 @@ input[type=nummber]::-webkit-outer-spin-button{
 .otpBox input{border:1px solid rgba(0,0,0,0.3) !important; outline:none !important; border-radius: 4px;}
 .otpBox input:focus{border:1px solid rgba(0,0,0,0.7)!important;}
 .otpBox .container{height: 90vh; display: flex;}
+
+#account-menu .MuiPaper-root{width: 300px !important;}
