--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ header .top-strip{border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px s
 .btn-org.btn-border:hover{background: #171717 !important;color:#000 !important; color: #fff !important;border:1px  solid #ac5555 !important;}
 
 .btn-lg{ font-size: 18px;padding: 10px 10px !important }
+.btn-sm{ font-size: 14px !important;padding: 5px 10px !important }
 .link:hover{color:#ac5555;}
 
 
