--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -4,3 +4,6 @@ body{font-family: "Playfair Display", serif;}
 .ReactCollapse--collapse {
   transition: height 400ms;
 }
+
+.btn-blue{background: #3872fa; color: #fff !important;}
+.btn-blue:hover{background: #3067e5;}
