--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -1,9 +1,12 @@
-body{font-family: "Playfair Display", serif;}
+body{font-family: "Playfair Display", serif;background: #f1f1f1;}
 .MuiBadge-badge{background-color: #ac5555 !important;}
 
 .ReactCollapse--collapse {
   transition: height 400ms;
 }
 
-.btn-blue{background: #3872fa; color: #fff !important;}
-.btn-blue:hover{background: #3067e5;}
+::-webkit-scrollbar{width:10px !important; height: 10px m !important;} 
+::-webkit-scrollbar-thumb{background: #ccc !important;}
+
+.btn-blue{background: #153c96; color: #000000 !important; padding: 8px 20px;}
+.btn-blue:hover{background: #3067e5 !important;}
