--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -10,3 +10,5 @@ body{font-family: "Playfair Display", serif;background: #f1f1f1;}
 
 .btn-blue{background: #153c96; color: #000000 !important; padding: 8px 20px;}
 .btn-blue:hover{background: #3067e5 !important;}
+
+th.MuiTabel.Cell-root{@apply bg-[#f1f1f1] py-1}
