--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -15,3 +15,6 @@ body{font-family: "Playfair Display", serif;background: #f1f1f1;}
 .btn-sm{padding:6px 20px !important; font-size:13px  !important}
 
 th.MuiTabel.Cell-root{@apply bg-[#f1f1f1] py-1}
+
+a.active button{background: #dcdcdc !important;}
+.MuiButton-icon svg{font-size:25px !important}
