Admin Add Product

--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -21,3 +21,6 @@ a.active button{background: #dcdcdc !important;}
 .MuiButton-icon svg{font-size:27px !important;}
 
 .css-rizt0-MuiTypography-root{font-size:14px !important;}
+
+.MuiAppBar-colorPrimary{background: #e6e6e6 !important;}
+.MuiSelect-select{background: #fff !important;}
