--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -24,3 +24,5 @@ a.active button{background: #dcdcdc !important;}
 
 .MuiAppBar-colorPrimary{background: #e6e6e6 !important;}
 .MuiSelect-select{background: #fff !important;}
+
+.MuiDialog-paper{background:#f9fafb !important;}
