--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -26,3 +26,8 @@ a.active button{background: #dcdcdc !important;}
 .MuiSelect-select{background: #fff !important;}
 
 .MuiDialog-paper{background:#f9fafb !important;}
+.otpBox input{border:1px solid rgba(0,0,0,0.3) !important; outline:none !important; border-radius: 4px;}
+.otpBox input:focus{border:1px solid rgba(0,0,0,0.7)!important;}
+.otpBox .container{height: 90vh; display: flex;}
+
+.MuiTableBody-root tr:nth-child(even){background: @apply bg-gray-50 !important;}
